force-app/main/default/objects/Relationship_Context__c/Relationship_Context__c.object-meta.xml
<CustomObject>

    <label>Relationship Context</label>
    <pluralLabel>Relationship Contexts</pluralLabel>

    <nameField>
        <label>Relationship Context Name</label>
        <type>Text</type>
    </nameField>


    <sharingModel>ReadWrite</sharingModel>

</CustomObject>