force-app/main/default/objects/Relationship_Context__c/fields/Context_Type__c.field-meta.xml
<CustomField>

    <fullName>Context_Type__c</fullName>

    <label>Context Type</label>

    <type>Picklist</type>

    <valueSet>
        <restricted>true</restricted>

        <valueSetDefinition>


            <value>
                <fullName>Business</fullName>
            </value>

            <value>
                <fullName>Customer</fullName>
            </value>

            <value>
                <fullName>Strategic</fullName>
            </value>

        </valueSetDefinition>

    </valueSet>

</CustomField>