force-app/main/default/objects/Relationship_Context__c/fields/Effective_Date__c.field-meta.xml
<CustomField>

    <fullName>Effective_Date__c</fullName>

    <label>Effective Date</label>

    <type>Date</type>

</CustomField>