force-app/main/default/objects/Relationship_Context__c/fields/Relationship_Profile__c.field-meta.xml
<CustomField>

    <fullName>Relationship_Profile__c</fullName>

    <label>Relationship Profile</label>

    <type>MasterDetail</type>

    <referenceTo>Relationship_Profile__c</referenceTo>

    <relationshipLabel>Relationship Contexts</relationshipLabel>

    <relationshipName>Relationship_Contexts</relationshipName>

</CustomField>