force-app/main/default/objects/Relationship_Context__c/validationRules/High_Priority_Requires_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Priority_Requires_Description</fullName>
    <active>true</active>
    <description>High priority contexts require a description.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Priority__c,&quot;High&quot;),
  ISBLANK(Description__c)
)</errorConditionFormula>
    <errorMessage>High priority context requires a description.</errorMessage>
</ValidationRule>